Correction de l'alignement des boutons (pour la partie des accessoires du site responsive.)

--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,13 @@ body {
         }
     }
 
+       .titreAccessoire {
+
+            h2 {
+                margin-bottom: 100px;
+            }
+        }
+
     .droneAlign, .accessoireAlign {
 
         width: 50%;
@@ -251,7 +258,8 @@ body {
     }
     
     h2 {
-        font-size: 19px;
+        font-size: 26px;
+        margin-bottom: 40px;
     }
 
     .drone, .accessoire {
@@ -278,12 +286,23 @@ body {
         }
     }
 
-    .accessoireAlign {
+    .accessoire {
+        img {
+            max-width: 70%;
+        }
+    }
+
+    .center {
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         img {
             width: 100%;
-            margin-top: 20px;
-            max-width: 45%;
-            height: auto;
+            max-width: 65%;
+            display: flex;
+              
             border-radius: 10px;
         }
     }
@@ -332,7 +351,7 @@ body {
         }
         
         h2 {
-            font-size: 17px;
+            font-size: 24px;
         }
     
         .drone, .accessoire {
@@ -355,25 +374,41 @@ body {
             
             h2 {
                 font-size: 17px;
+                margin-bottom: 0;
             }
         }
 
-        .drone, .accesoires {
+        .drone, .accessoire {
+            display: flex;
             flex-direction: column;
+            align-content: center;
             margin-left: 42px;
 
             li, p {
                 font-size: 17px;
                 line-height: 30px;
             }
+
+            img {
+                max-width: 700px;
+                width: 92%;
+            }
+        }
+
+        .center {
+            width: 75%;
+            max-width: 480px;
+            margin-top: 50px;
+            
+        }
+
+        .align {
+            margin-bottom: -90px;
         }
 
         .droneAlign, .accessoireAlign {
             width: 100%;
-
-            img.center , .center h1 {
-                margin-left: 200px;
-            }
+            align-self: center;
         }
         
         .drone:nth-child(2) .droneAlign:first-child, .drone:nth-child(4) .droneAlign:first-child {
@@ -396,7 +431,7 @@ body {
             display: block;
         }
 
-        .titreExplorer, .titreShop, .titreAccessoire {
+        .titreShop, .titreAccessoire {
 
             h1 {
                 font-size: 38px;
@@ -407,11 +442,24 @@ body {
             }
         }
     
-        .droneAlign {
-            .titreDrone, h1 {
+        .droneAlign, .accessoireAlign {
+
+            .titreDrone, h1, h2 {
+                margin-top: 100px;
                 font-size: 24px;
                 white-space: initial;
                 margin-right: 36px;
+            }
+
+            h2 {
+                margin-top: 0;
+            }
+        }
+
+        .droneAlign {
+
+            h1 {
+                margin-top: 0;
             }
         }
 
@@ -1214,7 +1262,7 @@ body {
         padding: 26px 0;
     }
         
-    .header-right a {
+      .header-right a {
         padding: 9.5px;
         font-size: 16px;
     }
